@@ -1,6 +1,7 @@
 Changes in 0.50.14:
   * Dependency checking now returns reordering information (which isn't
     used yet)
+  * Allow groups to include other groups defined in the same recipe
 
 Changes in 0.50.13:
   * Added automatic :data component for /usr/share, to which you should
